129 ==> 331864 - Merge Tags with same name when moving to same hierarchy level.
130 ==> 347302 - Reassign name to face.
131 ==> 391747 - BQM Tool "Remove Metadata" doesn't remove all metadata from image.
132 ==> 285683 - Already imported pictures not recognized after daylight savings time.
133 ==> 392309 - Icons are pixelated when my display scale factor is 1.2
134 ==> 392405 - Function 'getImageIdsFromArea' argument order different.
135 ==> 386224 - Metadata is not updated when moving tags.
136 ==> 370245 - Be able to rename tags which have been setted in pictures.
137 ==> 374470 - Deleted tags are not removed from file metadata.
138 ==> 374516 - Persons metadata are not updated after a tag removed.
139 ==> 392436 - Count Files in directory.
140 ==> 363859 - digiKam core port from QWebKit to QWebEngine [patch].
141 ==> 392427 - Cannot add collection on network drive.
142 ==> 392022 - Position of a face tag appears on top of bottom of the list, instead of being sorted alphabetically.
143 ==> 372763 - Rename does not give options on Conflict.
144 ==> 391533 - Feature request: add "NOT" tag matching condition in "Filters" panel.
145 ==> 381222 - digiKam crash on fuzzy search.
146 ==> 386275 - Crash caused by QtAV.
147 ==> 372342 - Face tag area is very short [patch].
148 ==> 391348 - People Side Menu Shows Only Faces Not People Tagged Images.
149 ==> 385630 - Views Requiring Maps Takes ~30s to Launch.
150 ==> 192908 - Allow to split icon-view in order to show multiple albums at the same time.
151 ==> 339088 - GIT master: crash when clicking through images in preview, with face recognition running in background.
152 ==> 341605 - Crash if I attempt to use left-sidebar tags tab.
153 ==> 227266 - Handle Video Date from metadata.
154 ==> 227259 - Needs to Edit Video Date.
155 ==> 373284 - digiKam crashed with SIGSEGV in QSortFilterProxyModel::parent().
156 ==> 384807 - digikam 5.7.0 AppImage bundle : provide a more recent ffmpeg version for video support.
157 ==> 