@@ -171,4 +171,5 @@ BUGFIXES:
 154 ==> 227259 - Needs to Edit Video Date.
 155 ==> 373284 - digiKam crashed with SIGSEGV in QSortFilterProxyModel::parent().
 156 ==> 384807 - digikam 5.7.0 AppImage bundle : provide a more recent ffmpeg version for video support.
-157 ==> 
+157 ==> 391835 - Deleted pictures still appear in group.
+158 ==> 
